--- a/index.html
+++ b/index.html
@@ -5,8 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BELAJAR HTML</title>
+    <style>
+      .Three-Column()
+    </style>
 </head>
 <body>
-    
+    <h1>hai nama saya Siesy</h1>
+    <!-- <h2>hai nama saya siesy</h2>
+    <h3>hai nama saya Siesy</h3>
+    <p>vghguh bhguhuihui vhguyguh guyguihui
+         guyguihui gyuguiyiuy guyguiyiuu dtrdtyfy dfyfjy fytfuyguy</p> -->
+         <h1>My name is Siesy</h1>
+         <hr>
+         <ul>
+            <li>Profil Singkat</li>
+            <li>Biodata</li>
+            <li>Riwayat Pendidikan</li>
+            <li>Hobi</li>
+            <li>Kontak</li>
+         </ul>
+         <ul>
+            <li><a href="">Profil Singkat</a></li>
+            <li><a href="">Biodata</a></li>
+            <li><a href="">Riwayat Pendidikan</a></li>
+            <li><a href="">Hobi</a></li>
+            <li><a href="">Kontak</a></li>
+         </ul>
+         <li><a href="#Profile">Profil Singkat</a></li>
+            <li><a href="#Biodata">Biodata</a></li>
+            <li><a href="#Pendidikan">Riwayat Pendidikan</a></li>
+            <li><a href="#Hobi">Hobi</a></li>
+            <li><a href="#Kontak">Kontak</a></li>
+         <ol>
+            <li>Profil Singkat</li>
+            <li>Biodata</li>
+            <li>Riwayat Pendidikan</li>
+            <li>Hobi</li>
+            <li>Kontak</li>
+         </ol>
+            <li><a href="">Profil Singkat</a></li>
+            <li><a href="#Profile" style ="color:red ">Profil Singkat</a></li>
+            <li><a href="">Biodata</a></li>
+            <li><a href="">Riwayat Pendidikan</a></li>
+            <li><a href="">Hobi</li>
+            <li>Kontak</li>
+
+         <div id="Profil" class="Three-column"></div>  
+              <h2>Profil Singkat</h2>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                  Sit iusto eum ratione minus sequi, assumenda nihil. 
+                  Aliquid quidem labore accusantium 
+                  odit asperiores distinctio beatae molestias in! 
+                  Sunt unde accusantium praesentium.</p>
+
+         <div id="Biodata"></div>
+         <div id="Pendidikan"></div>  
+         <div id="Hobi"></div>
+         <div id="Kontak"></div>
+
+
+         
 </body>
 </html>
