--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BELAJAR HTML</title>
-    <style>
-      .Three-Column()
-    </style>
+    <link href="CSS/style.css" rel="stylesheet"
 </head>
 <body>
     <h1>hai nama saya Siesy</h1>
@@ -18,48 +16,59 @@
          <h1>My name is Siesy</h1>
          <hr>
          <ul>
-            <li>Profil Singkat</li>
-            <li>Biodata</li>
-            <li>Riwayat Pendidikan</li>
-            <li>Hobi</li>
-            <li>Kontak</li>
-         </ul>
-         <ul>
-            <li><a href="">Profil Singkat</a></li>
-            <li><a href="">Biodata</a></li>
-            <li><a href="">Riwayat Pendidikan</a></li>
-            <li><a href="">Hobi</a></li>
-            <li><a href="">Kontak</a></li>
-         </ul>
-         <li><a href="#Profile">Profil Singkat</a></li>
+            <li><a href="#Profile">Profil Singkat</a></li>
             <li><a href="#Biodata">Biodata</a></li>
             <li><a href="#Pendidikan">Riwayat Pendidikan</a></li>
             <li><a href="#Hobi">Hobi</a></li>
             <li><a href="#Kontak">Kontak</a></li>
+            <li><a href="https://www.google.com/" target="blank">Go To Google</a></li>
+         </ul>
+
          <ol>
-            <li>Profil Singkat</li>
-            <li>Biodata</li>
-            <li>Riwayat Pendidikan</li>
-            <li>Hobi</li>
-            <li>Kontak</li>
-         </ol>
-            <li><a href="">Profil Singkat</a></li>
-            <li><a href="#Profile" style ="color:red ">Profil Singkat</a></li>
+            <li><a href="#Profile" >Profil Singkat</a></li>
             <li><a href="">Biodata</a></li>
             <li><a href="">Riwayat Pendidikan</a></li>
-            <li><a href="">Hobi</li>
-            <li>Kontak</li>
+            <li><a href="">Hobi</a></li>
+            <li><a href="">Kontak</a></li>
+         </ol>
 
-         <div id="Profil" class="Three-column"></div>  
+         <div id="Profil" class="three-column">
               <h2>Profil Singkat</h2>
                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                   Sit iusto eum ratione minus sequi, assumenda nihil. 
                   Aliquid quidem labore accusantium 
                   odit asperiores distinctio beatae molestias in! 
-                  Sunt unde accusantium praesentium.</p>
+                  Sunt unde accusantium praesentium. 
+                  Jika kita berbicara mengenai bisnis digital, 
+                  siapa lagi panutannya kalau bukan Google. 
+                  Perusahaan raksasa ini secara berkala selalu 
+                  memperbaharui profil perusahaannya dengan tetap 
+                  menonjolkan core business nya sebagai manajer data sedunia. 
+                  Profilnya sendiri bisa kamu lihat secara live di google.com/about.
+                  Satu lagi profil perusahaan startup digital yang sudah unicorn, 
+                  Bukalapak, sepertinya bisa juga jadi panutan mengingat besarnya 
+                  kontribusi yang sudah diberikan untuk banyak orang di negeri ini. 
+                  Anda dapat mengakses profil perusahaan nya yang ciamik dihiasi 
+                  segudang penghargaan di bukalapak.com/about.</p> </div>
 
          <div id="Biodata"></div>
-         <div id="Pendidikan"></div>  
+            <img src="image/Head.png" alt="Image Biodata" width="200px"></div>
+
+         <div id="Pendidikan"></div> 
+             <table class="table-html"> 
+               <tr>
+                  <th>NO</th>
+                  <th>NAMA</th>
+                  <th>Tempat & Tanggal Lahir</th>
+                  <th>HOBI</th>
+               </tr>
+               <tr>
+                  <td>1</td>
+                  <td>Siesy</td>
+                  <td>Semarang, 26 Juni 2000</td>
+                  <td>Belajar</td>
+               </tr>
+             </table>
          <div id="Hobi"></div>
          <div id="Kontak"></div>
 
